@@ -91,6 +91,9 @@
        is done. See issue #296 for details. (Stefan)
 - CHG: The alpha slider in TortoiseIDiff got moved down to the infobox
        and made smaller to faster change from 0 to 255 alpha.
+       Also hotkeys are added for fast switching between 0-127-255 alpha
+       values: cursor up = 0alpha, cursor down = 255alpha, 
+       cursor left/right = 127alpha.
        See issue #299 for details. (Stefan)
 
 Version 1.4.2
